--- a/gamedesigning2.html
+++ b/gamedesigning2.html
@@ -1,3 +1,6 @@
+<DOCTYPE html>
+<head>
+  <script>
 confirm("Are you ready to play the game?");
 var age = prompt("What is your age?");
 if (age < 14) {
@@ -30,3 +33,8 @@ switch (userChoice) {
   default:
     alert("Whoops, you entered an invalid command");
     }
+  </script>
+    </head>
+    <body>
+  </body>
+    </html>
